# logger_v2

./: CMakeLists.txt  README.md  ReadMe.md
src/: StereoCamera.cpp  Zed_cpu_2.cpp  Zed_cpu_2.hpp  build.sh  ems_data_structures.h  main.cpp
